zebra-state/src/service/finalized_state/disk_format/tests/snapshots/history_tree_raw_data@mainnet-1.snap
---
source: zebra-state/src/service/finalized_state/disk_format/tests/snapshot.rs
assertion_line: 126
expression: cf_data

---
[]
