zebra-state/src/service/finalized_state/disk_format/tests/snapshots/legacy_tip_chain_value_pool_raw_data@testnet_1.snap
---
source: zebra-state/src/service/finalized_state/disk_format/tests/snapshot.rs
expression: cf_data
---
KV(
  k: "",
  v: "24f4000000000000000000000000000000000000000000000000000000000000",
)
