zebra-state/src/service/finalized_state/disk_format/tests/snapshots/legacy_tip_chain_value_pool_raw_data@testnet_2.snap
---
source: zebra-state/src/service/finalized_state/disk_format/tests/snapshot.rs
expression: cf_data
---
KV(
  k: "",
  v: "6cdc020000000000000000000000000000000000000000000000000000000000",
)
