zebra-state/src/service/finalized_state/disk_format/tests/snapshots/orchard_anchors_raw_data@mainnet-2.snap
---
source: zebra-state/src/service/finalized_state/disk_format/tests/snapshot.rs
assertion_line: 153
expression: cf_data

---
[
  KV(
    k: "ae2935f1dfd8a24aed7c70df7de3a668eb7a49b1319880dde2bbd9031ae5d82f",
    v: "",
  ),
]
